# ddt_ros2_ws

./: .gitignore  README.md  build_engine.py  titatit_mujoco_sim2sim_work_summary.md  titatit_sim2sim_summary.md
src/ddt_ros2_control/: README.md
src/ddt_ros2_control/controller/rl_controller/: CMakeLists.txt  rl_controller_plugin.xml
src/ddt_ros2_control/controller/rl_controller/launch/: hw.launch.py  sim_gazebo.launch.py  sim_mujoco.launch.py  sim_webots.launch.py
src/ddt_ros2_control/controller/rl_controller/src/: rl_controller_node.cpp  rl_controller_parameters.yaml
src/ddt_ros2_control/docker/: README.md  start.bash
src/ddt_ros2_control/hardware/hardware_bridge/: CMakeLists.txt
src/ddt_ros2_control/hardware/hardware_bridge/config/: controllers.yaml
src/ddt_ros2_control/hardware/hardware_bridge/launch/: hardware_bridge.launch.py
src/ddt_ros2_control/hardware/hardware_bridge/src/: hardware_bridge_node.cpp
src/ddt_ros2_control/hardware/tita_robot/: CMakeLists.txt
src/ddt_ros2_control/hardware/tita_robot/include/tita_robot/: canfd_api.hpp  tita_robot.hpp
src/ddt_ros2_control/hardware/tita_robot/include/tita_robot/protocol/: can_utils.hpp  socket_can_common.hpp  socket_can_id.hpp  socket_can_receiver.hpp  socket_can_sender.hpp  visibility_control.hpp
src/ddt_ros2_control/hardware/tita_robot/test/: read_write_example.cpp
src/ddt_ros2_control/interaction/keyboard_controller/src/: keyboard_controller.cpp  main.cpp
src/ddt_ros2_control/interaction/teleop_command/: CMakeLists.txt
src/ddt_ros2_control/interaction/teleop_command/config/: param.yaml
src/ddt_ros2_control/interaction/teleop_command/include/teleop_command/: elrs_emwave_device.hpp  teleop_command_node.hpp
src/ddt_ros2_control/interaction/teleop_command/launch/: teleop_command.launch.py
src/ddt_ros2_control/interaction/teleop_command/src/: elrs_emwave_device.cpp  main.cpp  teleop_command_node.cpp  teleop_command_parameters.yaml
src/ddt_ros2_control/ros_utils/: CMakeLists.txt
src/ddt_ros2_control/ros_utils/include/ros_utils/: topic_names.hpp
src/ddt_ros2_control/simulation/gazebo_bridge/config/: controllers.yaml
src/ddt_ros2_control/simulation/gazebo_bridge/launch/: gazebo_bridge.launch.py
src/ddt_ros2_control/simulation/mujoco_bridge/mujoco_bridge/: CMakeLists.txt  README.md
src/ddt_ros2_control/simulation/webots_bridge/launch/: webots_bridge.launch.py
src/ddt_ros2_control/simulation/webots_bridge/src/: webots_bridge_node.cpp
src/ddt_ros2_control/simulation/webots_bridge/worlds/: empty_world.wbt  (+3 more)
src/ddt_ros2_control/urdfs/d1_description/: CMakeLists.txt
src/ddt_ros2_control/urdfs/d1h_description/: CMakeLists.txt
src/ddt_ros2_control/urdfs/tita_description/: CMakeLists.txt
src/ddt_ros2_control/urdfs/tita_description/mujoco/: robot.xml  scene.xml
src/ddt_ros2_control/urdfs/tita_description/urdf/: robot.urdf
src/ddt_ros2_control/urdfs/tita_description/xacro/: robot.xacro  ros2control.xacro
src/ddt_ros2_control/urdfs/titatit_description/: CMakeLists.txt  package.xml
titatit_robot_viewer/: README.md  robot.xml
(+60 files in other folders)
